--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -4,16 +4,16 @@
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
       <tr> <td>09:00</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/01-rstudio-intro.html">Introduction to R and RStudio</a></td> </tr>
-      <tr> <td>10:00</td>  <td>Seeking Help</td> </tr>
+      <tr> <td>10:00</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/03-seeking-help.html">Seeking Help</a></td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>10:50</td>  <td>Data Structures</td> </tr>
-      <tr> <td>11:45</td>  <td>Exploring Dataframes</td> </tr>
+      <tr> <td>10:50</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/04-data-structures-part1.html">Data Structures</a></td> </tr>
+      <tr> <td>11:45</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/05-data-structures-part2.html">Exploring Dataframes</a></td> </tr>
       <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:30</td>  <td>Creating Publication-Quality Graphics with ggplot2</td> </tr>
+      <tr> <td>13:30</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/08-plot-ggplot2.html">Creating Publication-Quality Graphics with ggplot2</a></td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>14:50</td>  <td>Functions Explained</td> </tr>
-      <tr> <td>15:20</td>  <td>Dataframe Manipulation with dplyr</td> </tr>
-      <tr> <td>15:50</td>  <td>Producing Reports with knitter</td> </tr>
+      <tr> <td>14:50</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/10-functions.html">Functions Explained</a></td> </tr>
+      <tr> <td>15:20</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/12-dplyr.html">Dataframe Manipulation with dplyr</a></td> </tr>
+      <tr> <td>15:50</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/14-knitr-markdown.html">Producing Reports with knitr</a></td> </tr>
       <tr> <td>16:10</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
       <tr> <td>16:40</td>  <td>END</td> </tr>
